Decision tree model
Hier staat het decision tree model. Niet 100% compleet, maar het is handiger dat morgen te bespreken.

--- a/Notebook_Declan.ipynb
+++ b/Notebook_Declan.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "fc463724",
+   "execution_count": 3,
+   "id": "cb7c7650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,397 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1d69f2",
+   "id": "28449d06",
    "metadata": {},
    "source": [
-    "# Beschrijving van standaardiseren\n",
-    "\n"
+    "# Decision tree model\n",
+    "\n",
+    "In dit gedeelte wordt een decision tree model gemaakt. Allereerst moeten we weten wat een decision tree model is, en hoe het werkt. Een decision tree model is een vorm van supervised machine learning. In dit geval wordt een decision tree classifier gebruikt omdat dit een classificatie probleem is. Het werkt door de dataset recursief te verdelen in \"vertakkingen\" op basis van de waarden van de invoerfuncties. Deze splitsingen creëren een structuur die op een boom lijkt, waarbij elke vertakking een beslissing of een test op een kenmerk vertegenwoordigt. En op die gesplitste data wordt weer een beslissing genomen, en zo vertakt het model tot we bij de \"bladeren\" komen. En net zoals bij een boom, noemen we de eerste splitsing de \"wortel\", en eindigen we bij het blad. Na het blad stopt het model met splitsen."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "295c1991",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_test = pd.read_csv('test_c.csv', sep = ',')\n",
+    "data_train = pd.read_csv('train_c.csv', sep = ',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9a53e7c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p_id</th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Outcome</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>575.000000</td>\n",
+       "      <td>575.00000</td>\n",
+       "      <td>575.000000</td>\n",
+       "      <td>575.000000</td>\n",
+       "      <td>575.000000</td>\n",
+       "      <td>575.000000</td>\n",
+       "      <td>575.00000</td>\n",
+       "      <td>575.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>387.502609</td>\n",
+       "      <td>3.81913</td>\n",
+       "      <td>121.582609</td>\n",
+       "      <td>72.556522</td>\n",
+       "      <td>32.551826</td>\n",
+       "      <td>0.470833</td>\n",
+       "      <td>33.38087</td>\n",
+       "      <td>0.339130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>222.159044</td>\n",
+       "      <td>3.36284</td>\n",
+       "      <td>30.743114</td>\n",
+       "      <td>12.322885</td>\n",
+       "      <td>6.934810</td>\n",
+       "      <td>0.329679</td>\n",
+       "      <td>11.82889</td>\n",
+       "      <td>0.473826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>18.200000</td>\n",
+       "      <td>0.078000</td>\n",
+       "      <td>21.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>196.500000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>27.600000</td>\n",
+       "      <td>0.239000</td>\n",
+       "      <td>24.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>383.000000</td>\n",
+       "      <td>3.00000</td>\n",
+       "      <td>116.000000</td>\n",
+       "      <td>72.000000</td>\n",
+       "      <td>32.400000</td>\n",
+       "      <td>0.371000</td>\n",
+       "      <td>29.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>584.500000</td>\n",
+       "      <td>6.00000</td>\n",
+       "      <td>142.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>36.600000</td>\n",
+       "      <td>0.635500</td>\n",
+       "      <td>41.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>767.000000</td>\n",
+       "      <td>15.00000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>114.000000</td>\n",
+       "      <td>67.100000</td>\n",
+       "      <td>2.420000</td>\n",
+       "      <td>70.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             p_id  Pregnancies     Glucose  BloodPressure         BMI  \\\n",
+       "count  575.000000    575.00000  575.000000     575.000000  575.000000   \n",
+       "mean   387.502609      3.81913  121.582609      72.556522   32.551826   \n",
+       "std    222.159044      3.36284   30.743114      12.322885    6.934810   \n",
+       "min      0.000000      0.00000   56.000000      24.000000   18.200000   \n",
+       "25%    196.500000      1.00000  100.000000      64.000000   27.600000   \n",
+       "50%    383.000000      3.00000  116.000000      72.000000   32.400000   \n",
+       "75%    584.500000      6.00000  142.000000      80.000000   36.600000   \n",
+       "max    767.000000     15.00000  197.000000     114.000000   67.100000   \n",
+       "\n",
+       "       DiabetesPedigreeFunction        Age     Outcome  \n",
+       "count                575.000000  575.00000  575.000000  \n",
+       "mean                   0.470833   33.38087    0.339130  \n",
+       "std                    0.329679   11.82889    0.473826  \n",
+       "min                    0.078000   21.00000    0.000000  \n",
+       "25%                    0.239000   24.00000    0.000000  \n",
+       "50%                    0.371000   29.00000    0.000000  \n",
+       "75%                    0.635500   41.00000    1.000000  \n",
+       "max                    2.420000   70.00000    1.000000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Weghalen rijen met nulwaarden\n",
+    "df_train = data_train.copy()\n",
+    "df_train.drop(df_train[df_train['BMI'] == 0].index, inplace=True)\n",
+    "df_train.drop(df_train[df_train['Glucose'] == 0].index, inplace=True)\n",
+    "df_train.drop(df_train[df_train['BloodPressure'] == 0].index, inplace=True)\n",
+    "\n",
+    "# Weghalen van kolommen wegens te hoog aantal nulwaarden\n",
+    "df_train.drop('Insulin', axis=1, inplace=True)\n",
+    "df_train.drop('SkinThickness', axis=1, inplace=True)\n",
+    "df_train.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60f6f222",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pregnancies</th>\n",
+       "      <th>Glucose</th>\n",
+       "      <th>BloodPressure</th>\n",
+       "      <th>BMI</th>\n",
+       "      <th>DiabetesPedigreeFunction</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>154.000000</td>\n",
+       "      <td>154.000000</td>\n",
+       "      <td>154.000000</td>\n",
+       "      <td>154.000000</td>\n",
+       "      <td>154.000000</td>\n",
+       "      <td>154.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.987013</td>\n",
+       "      <td>122.603896</td>\n",
+       "      <td>69.909091</td>\n",
+       "      <td>32.243506</td>\n",
+       "      <td>0.486948</td>\n",
+       "      <td>33.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.352859</td>\n",
+       "      <td>32.071493</td>\n",
+       "      <td>16.892727</td>\n",
+       "      <td>6.802277</td>\n",
+       "      <td>0.340347</td>\n",
+       "      <td>11.426622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.200000</td>\n",
+       "      <td>0.121000</td>\n",
+       "      <td>21.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>99.250000</td>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>26.950000</td>\n",
+       "      <td>0.258500</td>\n",
+       "      <td>24.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>121.500000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>31.800000</td>\n",
+       "      <td>0.394500</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>140.500000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>37.275000</td>\n",
+       "      <td>0.619250</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>199.000000</td>\n",
+       "      <td>122.000000</td>\n",
+       "      <td>49.700000</td>\n",
+       "      <td>2.288000</td>\n",
+       "      <td>81.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Pregnancies     Glucose  BloodPressure         BMI  \\\n",
+       "count   154.000000  154.000000     154.000000  154.000000   \n",
+       "mean      3.987013  122.603896      69.909091   32.243506   \n",
+       "std       3.352859   32.071493      16.892727    6.802277   \n",
+       "min       0.000000    0.000000       0.000000   18.200000   \n",
+       "25%       1.000000   99.250000      64.000000   26.950000   \n",
+       "50%       3.000000  121.500000      71.000000   31.800000   \n",
+       "75%       6.000000  140.500000      80.000000   37.275000   \n",
+       "max      17.000000  199.000000     122.000000   49.700000   \n",
+       "\n",
+       "       DiabetesPedigreeFunction         Age  \n",
+       "count                154.000000  154.000000  \n",
+       "mean                   0.486948   33.142857  \n",
+       "std                    0.340347   11.426622  \n",
+       "min                    0.121000   21.000000  \n",
+       "25%                    0.258500   24.000000  \n",
+       "50%                    0.394500   29.000000  \n",
+       "75%                    0.619250   40.000000  \n",
+       "max                    2.288000   81.000000  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Voordat het model getest wordt, is het noodzakelijk de test data op te schonen\n",
+    "# Weghalen rijen met nulwaarden\n",
+    "df_test = data_test.copy()\n",
+    "\n",
+    "# Weghalen van kolommen wegens te hoog aantal nulwaarden\n",
+    "df_test.drop('Insulin', axis=1, inplace=True)\n",
+    "df_test.drop('SkinThickness', axis=1, inplace=True)\n",
+    "\n",
+    "df_test.drop('p_id', axis = 1, inplace=True)\n",
+    "\n",
+    "df_test.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "113fd911",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(random_state=42)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hier importeren we de benodigde modules.\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# En hier wordt de voorspelde kolom uit de trainingsdata gehaald\n",
+    "X_train = df_train.drop('Outcome', axis=1)\n",
+    "y_train = df_train['Outcome']\n",
+    "\n",
+    "# Het maken van het decision tree model\n",
+    "classifier = DecisionTreeClassifier(random_state=42)\n",
+    "\n",
+    "# Het model wordt gefit op de trainingsdata\n",
+    "classifier.fit(X_train, y_train)\n",
+    "\n",
+    "#X_test = df_test.drop('Outcome', axis=1)\n",
+    "#y_test = df_test['Outcome']\n",
+    "\n",
+    "#y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "# Het model evalueren\n",
+    "#accuracy = accuracy_score(y_test, y_pred)\n",
+    "#print(f'Accuracy: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0923cf87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
