--- a/Notebook_Busse.ipynb
+++ b/Notebook_Busse.ipynb
@@ -1697,26 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aantal mislabelde voorspellingen uit 115: 28\n"
-     ]
-    }
-   ],
-   "source": [
-    "nb_model = GaussianNB(var_smoothing=0.1873817422860384)\n",
-    "y_pred = nb_model.fit(X_train, y_train).predict(X_test)\n",
-    "print(f'Aantal mislabelde voorspellingen uit {X_test.shape[0]}: {(y_test != y_pred).sum()}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1729,8 +1710,18 @@
    ],
    "source": [
     "nb_model = GaussianNB(var_smoothing=0.1873817422860384)\n",
-    "y_pred = nb_model.fit(X_train, y_train).predict(test_scaled)\n",
+    "y_pred = nb_model.fit(X_train, y_train).predict(X_test)\n",
     "print(f'Accuracy: {nb_model.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nb_model = GaussianNB(var_smoothing=0.1873817422860384)\n",
+    "y_pred = nb_model.fit(X_train, y_train).predict(test_scaled)"
    ]
   },
   {
