--- a/ML_Isa.ipynb
+++ b/ML_Isa.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "592935b8",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ab2fd93f",
    "metadata": {},
    "outputs": [],
@@ -1332,12 +1332,18 @@
     "**Bepaal bij welke hyperparameters het model de beste resultaten geeft op de gekozen metric**\n",
     "\n",
     "<i> #hoe kan ik dit het beste doen? <i>\n",
-    "    \n"
+    "    \n",
+    "gridsearch gebruiken \n",
+    "    sk learn kijken welke parameters je kan invullen \n",
+    "    bijv penalty\n",
+    "    c waarde\n",
+    "    gekozen metric (accuracy) \n",
+    "    checken wat accuracy doet \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "3fffa593",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1360,7 @@
        "      dtype=int64)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,6 +1377,208 @@
     "logreg.fit(X_train, y_train)\n",
     "predictions = logreg.predict(X_test)\n",
     "predictions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b5330036",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7662337662337663\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Accuracy: {logreg.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bc9d47ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7662337662337663\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg1 = LogisticRegression(penalty = 'l2', max_iter = 500)\n",
+    "logreg1.fit(X_train, y_train)\n",
+    "print(f'Accuracy: {logreg1.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dcb331b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7402597402597403\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg2 = LogisticRegression(penalty='l1', solver='liblinear', max_iter = 500)\n",
+    "logreg2.fit(X_train, y_train)\n",
+    "print(f'Accuracy: {logreg2.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5b191f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7597402597402597\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg3 = LogisticRegression(C=0.5, max_iter=500)\n",
+    "logreg3.fit(X_train, y_train)\n",
+    "print(f'Accuracy: {logreg3.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0cda8556",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7662337662337663\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg4 = LogisticRegression(C=0.01, max_iter=500)\n",
+    "logreg4.fit(X_train, y_train)\n",
+    "print(f'Accuracy: {logreg4.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "19281ce2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 10.0, 'penalty': 'l1'}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "logreg = LogisticRegression(max_iter = 500, solver='liblinear')\n",
+    "\n",
+    "\n",
+    "param_grid = {'penalty': ['l1', 'l2'], 'C': [0.1, 1.0, 10.0]}\n",
+    "\n",
+    "grid_search = GridSearchCV(logreg, param_grid, cv=5, error_score='raise')\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "best_params = grid_search.best_params_\n",
+    "best_model = grid_search.best_estimator_\n",
+    "y_pred = best_model.predict(X_test)\n",
+    "best_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "dfb73705",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 0, 1,\n",
+       "       0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 0, 1, 0, 0,\n",
+       "       1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1,\n",
+       "       0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1,\n",
+       "       0, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1,\n",
+       "       1, 0, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0],\n",
+       "      dtype=int64)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logreg6 = LogisticRegression(max_iter = 500, solver='liblinear', C = 10.0, penalty = 'l1')\n",
+    "logreg6.fit(X_train, y_train)\n",
+    "y_pred1 = logreg6.predict(X_test)\n",
+    "y_pred1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "db42bd16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predictions_df = pd.DataFrame({'p_id': data_test['p_id'], 'Outcome': y_pred1})\n",
+    "test_predictions_df.to_csv('voorspelling_lr1.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "01c58c9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7662337662337663\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Accuracy: {logreg6.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "55561541",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_predictions_df = pd.DataFrame({'p_id': data_test['p_id'], 'Outcome': y_pred})\n",
+    "test_predictions_df.to_csv('voorspelling_lr.csv', index=False)"
    ]
   },
   {
