--- a/Notebook_Declan.ipynb
+++ b/Notebook_Declan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 28,
    "id": "cb7c7650",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 29,
    "id": "295c1991",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "id": "0e4e3293",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 31,
    "id": "8d5acdfa",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 32,
    "id": "9a53e7c6",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "max                    2.420000   72.000000    1.000000  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 33,
    "id": "e4ea4458",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "max                    2.420000   72.000000    1.000000  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 34,
    "id": "6346e1c0",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "max    846.000000   49.700000                  2.288000   81.000000  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 35,
    "id": "60f6f222",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "max                    1.000000    1.000000  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 36,
    "id": "96528c8f",
    "metadata": {},
    "outputs": [
@@ -921,7 +921,7 @@
        "max                    1.000000    1.000000    1.000000  "
       ]
      },
-     "execution_count": 87,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 37,
    "id": "113fd911",
    "metadata": {},
    "outputs": [
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 38,
    "id": "2b32a60a",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 39,
    "id": "f201bf4f",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 40,
    "id": "79a58cc7",
    "metadata": {},
    "outputs": [
@@ -1103,7 +1103,7 @@
        "       0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0., 1., 1., 0., 0.])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 41,
    "id": "970282ca",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1124,7 @@
        "{'criterion': 'gini', 'max_depth': 5, 'min_samples_leaf': 8}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 42,
    "id": "3c390368",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1153,7 @@
        "0.6253119429590017"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 43,
    "id": "41322746",
    "metadata": {},
    "outputs": [],
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 44,
    "id": "6b06903d",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1234,7 @@
        "       0, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 0, 1, 1, 0, 1, 1, 0])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 45,
    "id": "310493d0",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vs_dt_0921130828.csv has been saved!\n"
+      "vs_dt_0927163837.csv has been saved!\n"
      ]
     }
    ],
@@ -1267,9 +1267,125 @@
   },
   {
    "cell_type": "markdown",
+   "id": "90d26362",
+   "metadata": {},
+   "source": [
+    "# Gradient boosting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "41cd6e60",
    "metadata": {},
-   "source": []
+   "source": [
+    "Gradient boosting is een manier van machine learning gebruikt in regressie and classificatieproblemen waarbij meerdere zogenaamde \"weak learners\", modellen die weinig aannames doen over de data, als een \"ensemble\" of samenwerking voorspellingen doen over de data. Er zijn meerdere redenen waarom er voor gradient boosting gekozen word in plaats van andere modellen. Omdat er bij gradient boosting gebruik word gemaakt van meerdere modellen die de fouten van vorige modellen corrigeren, kan het accurater zijn. Door het gebruik van weak learners is gradient boosting ook bestendiger teken overfitting.\n",
+    "\n",
+    "Er zijn ook een paar nadelen verbonden aan het gebruik van gradient boosting. Het is een stuk complexer dan een standaard model, en deze complexiteit en het gebruik van meerdere bomen zorgt er voor dat de tijd die het kost om het model te maken een stuk langer kan zijn dan een standaard model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "fbe09468",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importeren\n",
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "10c91820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# aanmaken gradient boosting model\n",
+    "gb = GradientBoostingClassifier(random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e591cd50",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'friedman_mse',\n",
+       " 'learning_rate': 8000,\n",
+       " 'max_depth': 5,\n",
+       " 'min_samples_leaf': 8,\n",
+       " 'n_estimators': 3}"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# gebruik van gridsearch om de beste parameters te zoeken\n",
+    "param_gb = {\"criterion\":[\"friedman_mse\", \"squared_error\"], \"learning_rate\":[0.1, 5000, 7500, 8000, 8500], \"n_estimators\":[1, 3, 5], \"max_depth\":[2, 3 ,5], \"min_samples_leaf\":[2, 4, 8]}\n",
+    "\n",
+    "gs_gb = GridSearchCV(gb, param_gb, cv=cv, scoring=\"recall\", n_jobs=-1)\n",
+    "\n",
+    "gs_gb.fit(X_train, y_train)\n",
+    "\n",
+    "gs_gb.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "0a18b5f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1,\n",
+       "       0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0,\n",
+       "       1, 1, 1, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1,\n",
+       "       1, 1, 1, 0, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 1, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1,\n",
+       "       1, 0, 0, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model met beste parameters voor Kaggle submissie\n",
+    "gb_sub = GradientBoostingClassifier(criterion=\"friedman_mse\", learning_rate=8000, max_depth=5, min_samples_leaf=4, n_estimators=1)\n",
+    "\n",
+    "y_pred_gb = gb_sub.fit(X_train, y_train).predict(test_scaled)\n",
+    "y_pred_gb = y_pred_gb.astype(int)\n",
+    "y_pred_gb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "4346580c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vs_gradient_boosting_0927170518.csv has been saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "submissie(gb_sub, \"gradient_boosting\")"
+   ]
   }
  ],
  "metadata": {
