--- a/Goede_isa.ipynb
+++ b/Goede_isa.ipynb
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aan de hand van de .describe() methode zijn alle basisstatistieken van de data getoond. Dit laat ons zien dat er waardes in het DataFrame staan die onlogisch zijn. Dit komt omdat waardes van de variabelen BloodPressure, Glucose, SkinThickness, Insulin en BMI onmogelijk nul kunnen zijn, tenzij de persoon overleden is. Om deze data beter te tonen **doe** we in de onderstaande cellen een deep-dive in de data van deze kolommen om te bepalen wat ermee moet gebeuren.\n",
+    "Aan de hand van de .describe() methode zijn alle basisstatistieken van de data getoond. Dit laat ons zien dat er waardes in het DataFrame staan die onlogisch zijn. Dit komt omdat waardes van de variabelen BloodPressure, Glucose, SkinThickness, Insulin en BMI onmogelijk nul kunnen zijn, tenzij de persoon overleden is. Om deze data beter te tonen **doen** we in de onderstaande cellen een deep-dive in de data van deze kolommen om te bepalen wat ermee moet gebeuren.\n",
     "\n",
     "Eerst zal er worden gekeken naar de hoeveelheid nulwaarden in een kolom."
    ]
@@ -915,13 +915,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Bij de visualisaties kun je zien dat mensen met diabetes (Outcome = 1) vaker zwanger zijn, een hogere glucose waarde, hogere bloeddruk, hoger bmi, hoger diabetes pedigree function (?) hebben, en ook ouder zijn**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -1083,6 +1076,15 @@
    ],
    "source": [
     "histplot(df_train, 'Outcome')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Bij de visualisaties van de boxplot en barplot kun je zien dat mensen met diabetes (Outcome = 1) vaker zwanger zijn, een hogere glucose waarde hebben, hogere bloeddruk, hoger bmi, hoger diabetes pedigree function (?) hebben, en vaak ook ouder zijn\n",
+    "Bij de visualisatie van de Histplot zie je hetzelfde maar dan op een andere manier. Je ziet dat op het begin de stavan voornamelijk blauw (Outcome = 0) zijn en naarmate de waardes hoger worden er meer oranje (Outcome = 1) is te zien. \n",
+    "De conclussie die wij hier uit trekken is dat mensen die diabetes hebben vaak hogere waardes hebben dan mensen die geen diabetes hebben.**"
    ]
   },
   {
@@ -1448,7 +1450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zoals er te zien is in de Confusion Matrix, zijn er vier verschillende vlakken. Aan de hand van deze vier vlakken worden de metrics precision, recall en f1 berekend. De vier vlakken kunnen wisselen van locatie aan de hand van de context, ondanks het wisselen van locatie blijven de 4 vlakken wel met dezelfde namen. Deze namen zijn: **moeten we nog cijfers erachter zetten**\n",
+    "Zoals er te zien is in de Confusion Matrix, zijn er vier verschillende vlakken. Aan de hand van deze vier vlakken worden de metrics precision, recall en f1 berekend. De vier vlakken kunnen wisselen van locatie aan de hand van de context, ondanks het wisselen van locatie blijven de 4 vlakken wel met dezelfde namen. Deze namen zijn: \n",
     "- True Positive (Uitkomsten tonen en zijn gewild)\n",
     "- False Positive (Uitkomsten tonen zich als gewild, maar in de werkelijkheid zijn ze ongewild)\n",
     "- True Negative (Uitkomsten tonen en zijn ongewild)\n",
@@ -1467,7 +1469,7 @@
    "source": [
     "#### *Welke metric?*\n",
     "\n",
-    "In ons geval willen we voorspellen of iemand diabetes heeft. Omdat diabetes vrij veel impact op de gezondheid van een persoon heeft, beredeneren wij dat het belangrijker is om zo min mogelijk voorspellingen te hebben die diabetes missen. In context van een confusion matrix, **volgens ons zijn** de false negatives belangrijker om te voorkomen dan de false positives. Op basis hiervan kiezen wij voor de metric recall. Met recall wordt gekeken hoeveel van de werkelijk positieve voorspelling correct zijn voorspeld. Als de recall hoog is, mist het model nauwelijks positieve gevallen.\n",
+    "In ons geval willen we voorspellen of iemand diabetes heeft. Omdat diabetes vrij veel impact op de gezondheid van een persoon heeft, beredeneren wij dat het belangrijker is om zo min mogelijk voorspellingen te hebben die diabetes missen. In context van een confusion matrix, **zijn volgens ons** de false negatives belangrijker om te voorkomen dan de false positives. Op basis hiervan kiezen wij voor de metric recall. Met recall wordt gekeken hoeveel van de werkelijk positieve voorspelling correct zijn voorspeld. Als de recall hoog is, mist het model nauwelijks positieve gevallen.\n",
     "\n",
     "Hoewel wij persoonlijk de recall het belangrijkste vinden, zal op Kaggle de F1 scores van de voorspellingen worden gebruikt. Om deze reden zal er getest worden met de F1 score i.p.v. de recall."
    ]
@@ -1478,7 +1480,7 @@
    "source": [
     "## ***Modelleren***\n",
     "\n",
-    "Eerst zal de data uit het test dataframe **omgezet** aangepast worden om overeen te komen met de data uit de train dataset."
+    "Eerst zal de data uit het test dataframe **omgezet #moet weg** aangepast worden om overeen te komen met de data uit de train dataset."
    ]
   },
   {
@@ -1757,35 +1759,37 @@
     "\n",
     "#### **Gradient descent**\n",
     "\n",
-    "Gradient descent is een optimalisatie algoritme dat de erors minimaliseert tussen de werkelijke en de voorspelde resultaten.\n",
-    "https://www.javatpoint.com/gradient-descent-in-machine-learning\n",
+    "**Gradien descent is een optimalisatie algoritme dat de erors minimaliseert tussen de true en predicticted resultaten. De formule van gradient descent is  𝑥𝑛𝑒𝑤=𝑥𝑜𝑙𝑑−𝛼𝑑𝑦𝑑𝑥\n",
+    "  waarbij 𝑥𝑛𝑒𝑤 de bijgewerkte waarde van de onafhankelijke variabele na één stap is, 𝑥𝑜𝑙𝑑 is de vorige waarde van de onafhankelijke variabele, 𝑑𝑦𝑑𝑥 de gradiënt (afgeleide) van deze functie ten opzichte van de onafhankelijke variabele is en 𝛼 is de learning rate, deze bepaalt de grootte van de stap die wordt genomen.**\n",
     "\n",
-    "<i> moet nog rekenvoorbeeld bij en uitleggen hoe het toepasbaar is in deze context</i>\n",
+    "**𝑦=𝑥2−𝑥−6 de gradient van deze functie is f'(x) = 2x-1. De wiskundige formule van het berekenen van de gradient is xn = nx*n-1**\n",
+    "\n",
+    "\n",
+    "\n",
+    "**(Gradient Descent in Machine Learning, z.d.)**\n",
     "\n",
     "\n",
     "#### **Regularisatie**\n",
     "De vorm van regularisatie die van toepassing is op logistic regression is de L1 en L2 regularisatie. Ook wel de Lasso (L1) en ridge (L2) regularisatie genoemd. Door regularisatie toe te passen, wordt een complex model tijdens het trainen vereenvoudigd. \n",
     "L1 voegt de “absolute waarde van de grootte” (“absolute value of magnitude”) van de coëfficiënt als penalty term toe aan de loss-functie.\n",
-    "L2 voegt de “kwadratische omvang” (“squared magnitude”) van de coëfficiënt als penalty term toe aan de loss-functie.\n",
-    "https://builtin.com/data-science/l2-regularization\n",
+    "L2 voegt de “kwadratische omvang” (“squared magnitude”) van de coëfficiënt als penalty term toe aan de loss-functie. **(Nagpal, 2022)**\n",
     "\n",
-    "wiskundige formule voor L1 is:\n",
-    "L1(θ) = λ * Σ|θj|,\n",
     "\n",
-    "waarbij\n",
+    "**Wiskundige formule voor L1 is:\n",
+    "L1(θ) = λ * Σ|θj|**\n",
     "\n",
+    "**Waarbij\n",
     "θj L1-norm van de gewichtsvector\n",
-    "λ is de regularisatieparameter\n",
+    "λ is de regularisatieparameter**\n",
     "\n",
-    "wiskundige formule voor L2 is:\n",
-    "L2(θ) = λ * Σ(θj^2),\n",
+    "**wiskundige formule voor L2 is:\n",
+    "L2(θ) = λ * Σ(θj^2)**\n",
     "\n",
-    "waarbij\n",
+    "**waarbij\n",
     "θj L2-norm van de gewichtsvector\n",
-    "λ is de regularisatieparameter\n",
+    "λ is de regularisatieparameter**\n",
     "\n",
-    "\n",
-    "<i>Wiskundige formules missen</i>\n",
+    "**Misschien zelfde als bij SVM hier neerzetten?**\n",
     "\n",
     "Het verminderen of verwijderen van modelparameters is een methode om overfitting te voorkomen.\n",
     "\n",
@@ -2105,9 +2109,9 @@
    "metadata": {},
    "source": [
     "### *Pruning in Random Forest*\n",
-    "Hoewel het niet **persee** nodig is om pruning toe te passen op Random Forest, is het bij het maken van ons model wel van toepassing gekomen. Door de max_depth aan te passen van None naar 5 is de accuracy van het model verbeterd ca. **met** 0.04. Dit staat gelijk aan ongeveer 4% accuracy.\n",
+    "Hoewel het niet **per se** nodig is om pruning toe te passen op Random Forest, is het bij het maken van ons model wel van toepassing gekomen. Door de max_depth aan te passen van None naar 5 is de accuracy van het model verbeterd **met** ca. 0.04. Dit staat gelijk aan ongeveer 4% accuracy.\n",
     "\n",
-    "Nu de optimale hyperparameters gekozen zijn worden deze ingevuld bij een Random Forest model, om zo de voorspellingen goed aan te maken. Dit wordt ook gedaan zodat de GridSearch niet elke keer uitgevoerd moet worden als er op Run All word geklikt."
+    "Nu de optimale hyperparameters gekozen zijn **hier moet komma** worden deze ingevuld bij een Random Forest model, om zo de voorspellingen goed aan te maken. Dit wordt ook gedaan zodat de GridSearch niet elke keer uitgevoerd moet worden als er op Run All word geklikt."
    ]
   },
   {
@@ -2144,7 +2148,7 @@
    "source": [
     "## ***Gradient Boosting***\n",
     "\n",
-    "Gradient boosting is een manier van machine learning gebruikt in regressie and classificatieproblemen waarbij meerdere zogenaamde \"weak learners\", modellen die weinig aannames doen over de data, als een \"ensemble\" of samenwerking voorspellingen doen over de data. Er zijn meerdere redenen waarom er voor gradient boosting gekozen word in plaats van andere modellen. Omdat er bij gradient boosting gebruik word gemaakt van meerdere modellen die de fouten van vorige modellen corrigeren, kan het accurater zijn. Door het gebruik van weak learners is gradient boosting ook bestendiger teken overfitting.\n",
+    "Gradient boosting is een manier van machine learning gebruikt in regressie and classificatieproblemen waarbij meerdere zogenaamde \"weak learners\", modellen die weinig aannames doen over de data, als een \"ensemble\" of samenwerking voorspellingen doen over de data. Er zijn meerdere redenen waarom er voor gradient boosting gekozen **wordt** in plaats van andere modellen. Omdat er bij gradient boosting gebruik **wordt** gemaakt van meerdere modellen die de fouten van vorige modellen corrigeren, kan het accurater zijn. Door het gebruik van weak learners is gradient boosting ook bestendiger **tegen** overfitting.\n",
     "\n",
     "Er zijn ook een paar nadelen verbonden aan het gebruik van gradient boosting. Het is een stuk complexer dan een standaard model, en deze complexiteit en het gebruik van meerdere bomen zorgt er voor dat de tijd die het kost om het model te maken een stuk langer kan zijn dan een standaard model."
    ]
@@ -2196,7 +2200,7 @@
     "## ***Support Vector Machines***\n",
     "\n",
     "#### *Werking van SVM*\n",
-    "Een Support Vector Machine is een model dat ingezet kan worden bij classificatie en regressie problemen. Het model heeft als doel om een hyperplane (de beslissingsgrens) te vinden, waarbij de datapunten in verschillende klassen worden gescheden en waarbij een zo groot mogelijke marge tussen de klassen zit. In een deel van de ML-problemen zal de hyperplane van een SVM model een lineaire vergelijking aanemen. Aan de hand van een wiskundig voorbeeld zal dit worden uitgelegd:\n",
+    "Een Support Vector Machine is een model dat ingezet kan worden bij classificatie en regressie problemen. Het model heeft als doel om een hyperplane (de beslissingsgrens) te vinden, waarbij de datapunten in verschillende klassen worden gescheden en waarbij een zo groot mogelijke marge tussen de klassen zit. In een deel van de ML-problemen zal de hyperplane van een SVM model een lineaire vergelijking **aannemen**. Aan de hand van een wiskundig voorbeeld zal dit worden uitgelegd:\n",
     "\n",
     "Elk gegeven punt in de grafiek voor SVM zal bestaan uit een waarde (x, y). Het doel van SVM is om een grens te maken tussen de punten, om zo deze punten te classificeren. In onze dataset ziet de formule voor deze lijn er als volgt uit:\n",
     "\n",
@@ -2312,84 +2316,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADA boosting"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'learning_rate': 0.1, 'n_estimators': 50}"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "\n",
-    "base_model = DecisionTreeClassifier(max_depth=1)\n",
-    "\n",
-    "n_estimators = 100\n",
-    "adaboost = AdaBoostClassifier(base_model, n_estimators=n_estimators, random_state=42)\n",
-    "adaboost.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred_ada = adaboost.predict(X_test)\n",
-    "\n",
-    "param_grid = {'n_estimators': [50, 100, 150, 200], 'learning_rate': [0.01, 0.1, 1.0, 10.0]}\n",
-    "\n",
-    "grid_search = GridSearchCV(adaboost, param_grid, cv=5, error_score='raise')\n",
-    "grid_search.fit(X_train, y_train)\n",
-    "best_params = grid_search.best_params_\n",
-    "best_model = grid_search.best_estimator_\n",
-    "y_pred = best_model.predict(X_test)\n",
-    "best_params\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "F1 score: 0.6808510638297872\n",
-      "vs_Adaboost_0929093128.csv has been saved!\n"
-     ]
-    }
-   ],
-   "source": [
-    "adaboost_tuned = AdaBoostClassifier(base_model, n_estimators=50, learning_rate=0.1, random_state=42)\n",
-    "adaboost_tuned.fit(X_train, y_train)\n",
-    "\n",
-    "y_pred_ada1 = adaboost_tuned.predict(X_test)\n",
-    "\n",
-    "print(f'F1 score: {f1_score(y_test, y_pred_ada1)}')\n",
-    "\n",
-    "#submissie(adaboost_tuned, 'Adaboost')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Bronvermelding\n",
     "\n",
-    "powerpoints uit de lessen\n",
+    "powerpoints uit de lessen **(LR en ADA boosting)**\n",
     "\n",
-    "datacamp\n",
+    "datacamp **(LR en ADA boosting)**\n",
     "\n",
-    "https://www.javatpoint.com/gradient-descent-in-machine-learning\n",
+    "Nagpal, A. (2022, 05 januari). L1 and L2 Regularization Methods, Explained. Builtin. Van https://builtin.com/data-science/l2-regularization. **(LR)**\n",
     "\n",
-    "https://builtin.com/data-science/l2-regularization"
+    "\n",
+    "Gradient Descent in Machine Learning. (z.d.). Javapoint. Van https://www.javatpoint.com/gradient-descent-in-machine-learning **(LR)**\n"
    ]
   },
   {
